--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: docker:latest
 variables:
   REPOSITORY_URL: 249362495243.dkr.ecr.us-east-2.amazonaws.com
-  REPO_NAME: $CI_PROJECT_DIR
+  REPO_NAME: $CI_PROJECT_NAME
   GIT_SUBMODULE_STRATEGY: normal
 stages:
   - build-test
