--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build-test:
     - git submodule update --remote
   script:
     - $(aws ecr get-login --no-include-email --region us-east-2)
+    - aws ecr create-repository --repository-name $REPO_NAME
     - docker build -t $REPOSITORY_URL/$REPO_NAME:test .
     - docker push $REPOSITORY_URL/$REPO_NAME:test
   only:
