--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ variables:
   REPOSITORY_URL: 249362495243.dkr.ecr.us-east-2.amazonaws.com
   REPO_NAME: $CI_PROJECT_NAME
   GIT_SUBMODULE_STRATEGY: normal
+  REGION: us-east-2
 stages:
   - build-test
 #  - build-dev
@@ -20,10 +21,10 @@ build-test:
     - pip install awscli
     - git submodule update --remote
   script:
-    - $(aws ecr get-login --no-include-email --region us-east-2)
-    - aws ecr create-repository --repository-name $REPO_NAME --region us-east-2 || echo "success"
-    - docker build -t $REPOSITORY_URL/$REPO_NAME:latest .
-    - docker tag $REPOSITORY_URL/$REPO_NAME:latest
+    - $(aws ecr get-login --no-include-email --region $REGION)
+    - aws ecr create-repository --repository-name $REPO_NAME --region $REGION || echo "success"
+    - docker build -t $REPO_NAME:latest .
+    - docker tag $REPO_NAME:latest $REPOSITORY_URL/$REPO_NAME:latest
     - docker push $REPOSITORY_URL/$REPO_NAME:latest
   only:
     - master
