--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,11 @@
-image: 249362495243.dkr.ecr.us-east-2.amazonaws.com/docker:latest
+image: docker:latest
 variables:
   REPOSITORY_URL: 249362495243.dkr.ecr.us-east-2.amazonaws.com
   REPO_NAME: $CI_PROJECT_NAME
   GIT_SUBMODULE_STRATEGY: normal
+  REGION: us-east-2
 stages:
+  - build-init
   - build-test
 #  - build-dev
 #  - build-staging
@@ -13,16 +15,29 @@ stages:
 #  - deploy-staging
 #  - deploy-production
 
+
+build-init:
+stage: build-init
+  before_script:
+    - apk add --no-cache curl jq python py-pip git
+    - pip install awscli
+    - git submodule update --remote
+  script:
+    - $(aws ecr get-login --no-include-email --region $REGION)
+    - aws ecr create-repository --repository-name $REPO_NAME --region $REGION || echo "success"
+  only:
+    - init
 build-test:
   stage: build-test
   before_script:
+    - apk add --no-cache curl jq python py-pip git
+    - pip install awscli
     - git submodule update --remote
   script:
-    - $(aws ecr get-login --no-include-email)
-    - aws ecr create-repository --repository-name $REPO_NAME --region $REGION || echo "success"
+    - $(aws ecr get-login --no-include-email --region $REGION)
     - docker build -t $REPO_NAME:latest .
     - docker tag $REPO_NAME:latest $REPOSITORY_URL/$REPO_NAME:latest
-    - docker push -f $REPOSITORY_URL/$REPO_NAME:latest
+    - docker push $REPOSITORY_URL/$REPO_NAME:latest
   only:
     - master
 #
