--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ variables:
   REPOSITORY_URL: 249362495243.dkr.ecr.us-east-2.amazonaws.com
   REPO_NAME: $CI_PROJECT_NAME
   GIT_SUBMODULE_STRATEGY: normal
-  REGION: us-east-2
+  AWS_DEFAULT_REGION: us-east-2
+  SERVICE_NAME: $CI_PROJECT_NAME-service
 stages:
   - build-init
   - build-test
@@ -23,30 +24,30 @@ build-init:
     - pip install awscli
     - git submodule update --remote
   script:
-    - $(aws ecr get-login --no-include-email --region $REGION)
-    - aws ecr create-repository --repository-name $REPO_NAME --region $REGION || echo "success"
+    - $(aws ecr get-login --no-include-email)
+    - aws ecr create-repository --repository-name $REPO_NAME || echo "success"
   only:
     - init
 build-test:
   stage: build-test
   before_script:
+    - export FAMILY=test-services
     - apk add --no-cache curl jq python py-pip git
     - pip install awscli
     - git submodule update --remote
   script:
-    - $(aws ecr get-login --no-include-email --region $REGION)
+    - $(aws ecr get-login --no-include-email)
     - docker build -t $REPO_NAME:latest .
     - docker tag $REPO_NAME:latest $REPOSITORY_URL/$REPO_NAME:latest
     - docker push $REPOSITORY_URL/$REPO_NAME:latest
+    - sh ./deploy.sh
   only:
     - master
-#
-#deploy-test:
-#  stage: deploy-test
-#  script:
-#    - upgrade --environment dev --stack services-test --service hotel-booking-test
-#  environment:
-#    name: test
-#    url: https://test-micro-services.vntrip.vn/hotel-booking
-#  only:
-#    - test
+
+deploy-test:
+  stage: deploy-test
+  script:
+    - upgrade --environment dev --stack services-test --service hotel-booking-test
+  only:
+    - master
+  when: on_success
