--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,12 @@ build-test:
 
 deploy-test:
   stage: deploy-test
+  before-script:
+    - apk add --no-cache curl jq python py-pip git
+    - pip install awscli
   script:
+    - export FAMILY=test-services
+    - $(aws ecr get-login --no-include-email)
     - sh ./deploy.sh
   only:
     - master
