--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ build-test:
 
 deploy-test:
   stage: deploy-test
-  before-script:
+  before_script:
     - apk add --no-cache curl jq python py-pip git
     - pip install awscli
   script:
