--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker:latest
+image: trungcong24/docker
 variables:
   REPOSITORY_URL: 249362495243.dkr.ecr.us-east-2.amazonaws.com
   REPO_NAME: $CI_PROJECT_NAME
@@ -20,8 +20,6 @@ stages:
 build-init:
   stage: build-init
   before_script:
-    - apk add --no-cache curl jq python py-pip git
-    - pip install awscli
     - git submodule update --remote
   script:
     - $(aws ecr get-login --no-include-email)
@@ -32,8 +30,6 @@ build-test:
   stage: build-test
   before_script:
     - export FAMILY=test-services
-    - apk add --no-cache curl jq python py-pip git
-    - pip install awscli
     - git submodule update --remote
   script:
     - $(aws ecr get-login --no-include-email)
@@ -45,11 +41,9 @@ build-test:
 
 deploy-test:
   stage: deploy-test
-  before_script:
-    - apk add --no-cache curl jq python py-pip git
-    - pip install awscli
   script:
-    - export FAMILY=test-services
+    - export FAMILY=${REPO_NAME}_test
+    - export CLUSTER=test
     - $(aws ecr get-login --no-include-email)
     - sh ./deploy.sh
   only:
