--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,8 +34,8 @@ build-test:
   script:
     - $(aws ecr get-login --no-include-email)
     - docker build -t $REPO_NAME:latest .
-    - docker tag $REPO_NAME:latest REPOSITORY_URI/$REPO_NAME:latest
-    - docker push REPOSITORY_URI/$REPO_NAME:latest
+    - docker tag $REPO_NAME:latest $REPOSITORY_URI/$REPO_NAME:latest
+    - docker push $REPOSITORY_URI/$REPO_NAME:latest
   only:
     - master
 
